syntax = "proto3";

package com.road.yishi.proto.army;

message LotteryRuneReqMsg {
  int32 op = 1;
}
