syntax = "proto3";

package com.road.yishi.proto.army;

message RuneUnloadReqMsg {
  int32 runeId = 1;
  int32 index = 2;
}
